--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,11 @@ i {
 .mix {
     display: none;
 }
-/*************/
+/*************start footer*******************/
+
+
+
+/*************end footer********************/
 #518dc1
 #bdbdbd
 #454545
